# cv-evidence-renderer

./: .env.example  .gitignore  COMPETITORS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  index.html
scripts/: benchmark.py  make_demo_gif.py
src/cv_evidence_renderer/: __init__.py  adapters.py  buffer.py  cli.py  offline.py  overlay.py  pool.py  recorder.py  types.py
src/cv_evidence_renderer/encoder/: __init__.py  libx264.py  nvenc.py
src/cv_evidence_renderer/io/: __init__.py  rtsp.py
tests/: conftest.py  test_adapters_jsonl.py  test_adapters_supervision.py  test_adapters_yolo.py  test_golden_frame.py  test_libx264.py  test_offline_render.py  test_overlay.py  test_render_clip.py  test_render_clips.py  test_smoke.py
