[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "cv-evidence-renderer"
version = "0.0.1"
description = "The missing evidence-clip layer between your detector and storage. Trim, bbox burn-in, NVENC, pure Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "ddinhcchi", email = "chongchidinh1@gmail.com" },
]
keywords = [
  "computer-vision",
  "video",
  "detection",
  "evidence",
  "nvenc",
  "rtsp",
  "supervision",
  "deepstream",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "av>=12.0",
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "typer>=0.12",
]

[project.optional-dependencies]
supervision = ["supervision>=0.18"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
cv-evidence = "cv_evidence_renderer.cli:app"

[project.urls]
Homepage = "https://github.com/ddinhcchi/cv-evidence-renderer"
Repository = "https://github.com/ddinhcchi/cv-evidence-renderer"
Issues = "https://github.com/ddinhcchi/cv-evidence-renderer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_evidence_renderer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501", # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"src/cv_evidence_renderer/cli.py" = ["B008"]  # typer.Option in defaults is the idiomatic Typer pattern

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "gpu: tests that require an NVIDIA GPU + NVENC (skipped on CPU runners)",
  "slow: tests that take more than 5 seconds",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
